--- a/index.html
+++ b/index.html
@@ -20,32 +20,51 @@
     <form id="container">
       <h1>Contact Us</h1>
 
-      <h2>First Name</h2>
+      <h2>First Name *</h2>
 
-      <input type="text" name="firstName" id="firstName" />
+      <input type="text" name="firstName" id="firstName" class="square" />
 
-      <h2>Last Name</h2>
+      <h2>Last Name *</h2>
 
-      <input type="text" name="lastName" id="lastName" />
+      <input type="text" name="lastName" id="lastName" class="square" />
 
-      <h2>Email Address</h2>
-      <input type="email" name="email" id="email" />
+      <h2>Email Address *</h2>
+      <input type="email" name="email" id="email" class="square" />
 
-      <h2>Query Type</h2>
-      <input type="radio" name="radio" id="radio1" value="General Enquiry" />
-      General Enquiry
-      <input type="radio" name="radio" id="radio2" value="Support Request" />
-      Support Request
+      <h2>Query Type *</h2>
 
-      <h2>Message</h2>
-      <input type="text" name="comment" id="comment">
-      <br>
-      <input type="checkbox" name="consent" id="consent" value="consent"> I consent to being contacted by the team
-      
-      <br>
+      <div class="square radio">
+        <input
+          type="radio"
+          name="radio"
+          id="radio1"
+          value="General Enquiry"
+          class="squareCircle"
+        />
+        <span>General Enquiry</span>
+      </div>
 
-      <input type="submit" value="submit">
+      <div class="square radio">
+        <input
+          type="radio"
+          name="radio"
+          id="radio2"
+          value="Support Request"
+          class="squareCircle"
+        
+        />
+        <span>Support Request</span>
+      </div>
 
+      <h2>Message *</h2>
+      <input type="text" name="comment" id="comment" class="square" />
+      <br />
+      <input type="checkbox" name="consent" id="consent" value="consent" /> I
+      consent to being contacted by the team *
+
+      <br />
+
+      <input type="submit" value="Submit" id="submit" class="square" />
     </form>
   </body>
 </html>
