--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <label for="radio1">General Enquiry</label>
       </div>
 
-      <div class="square radio">
+      <div class="square radio" id="sd">
         <input
           type="radio"
           name="radio"
@@ -65,5 +65,7 @@
 
       <input type="submit" value="Submit" id="submit" class="square" />
     </form>
+
+    <script src="script.js"></script>
   </body>
 </html>
