--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <h2>Email Address <span class="sinal">*</span></h2>
       <input type="email" name="email" id="email" class="square" />
-      <p class="erros"></p>
+      <p class="erros" id="erroEmail"></p>
 
       <h2>Query Type <span class="sinal">*</span></h2>
 
@@ -62,6 +62,8 @@
 
       <h2>Message <span class="sinal">*</span></h2>
       <textarea name="comment" id="comment" maxlength="430"></textarea>
+      <p class="erros" id="erroMsg"></p>
+
 
       <p class="erros"></p>
 
