--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div id="send">
-      <h2>Message Sent!</h2>
+      <p class="title">Message Sent!</p>
       <p>Thanks for completing the form. We'll be in touch soon!</p>
     </div>
     <form id="container">
@@ -27,14 +27,14 @@
       <div id="areaName">
         <div>
           <label for="firstName">
-            <h2>First Name <span class="sinal">*</span></h2>
+            <p class="title">First Name <span class="sinal">*</span></p>
           </label>
           <input type="text" name="firstName" id="firstName" class="square" />
           <p class="erros" id="erroFName"></p>
         </div>
         <div>
           <label for="lastName">
-            <h2>Last Name <span class="sinal">*</span></h2>
+            <p class="title">Last Name <span class="sinal">*</span></p>
           </label>
           <input type="text" name="lastName" id="lastName" class="square" />
           <p class="erros" id="erroLName"></p>
@@ -42,12 +42,12 @@
       </div>
 
       <label for="email">
-        <h2>Email Address <span class="sinal">*</span></h2>
+        <p class="title">Email Address <span class="sinal">*</span></p>
       </label>
       <input type="email" name="email" id="email" class="square" />
       <p class="erros" id="erroEmail"></p>
 
-      <h2>Query Type <span class="sinal">*</span></h2>
+      <p class="title">Query Type <span class="sinal">*</span></p>
 
       <div id="queryType">
         <div class="square radio" id="sdd">
@@ -73,7 +73,7 @@
       </div>
       <p class="erros" id="erroRadio"></p>
       <label for="comment">
-        <h2>Message <span class="sinal">*</span></h2>
+        <p class="title">Message <span class="sinal">*</span></p>
       </label>
       <textarea name="comment" id="comment" maxlength="430"></textarea>
       <p class="erros" id="erroMsg"></p>
