--- a/index.html
+++ b/index.html
@@ -26,9 +26,14 @@
 
       <div id="areaName">
         <div>
-          <label for="firstName">
-            <p class="title">First Name <span class="sinal">*</span></p>
-          </label>
+          
+            <p class="title">
+              <label for="firstName">
+              First Name 
+              </label>
+              <span class="sinal">*</span>
+            </p>
+          
           <input type="text" name="firstName" id="firstName" class="square" />
           <p class="erros" id="erroFName"></p>
         </div>
