--- a/index.html
+++ b/index.html
@@ -38,17 +38,21 @@
           <p class="erros" id="erroFName"></p>
         </div>
         <div>
-          <label for="lastName">
-            <p class="title">Last Name <span class="sinal">*</span></p>
-          </label>
+          <p class="title">
+            <label for="lastName">
+              Last Name <span class="sinal">*</span>
+            </label>
+          </p>
           <input type="text" name="lastName" id="lastName" class="square" />
           <p class="erros" id="erroLName"></p>
         </div>
       </div>
 
-      <label for="email">
-        <p class="title">Email Address <span class="sinal">*</span></p>
-      </label>
+      <p class="title">
+        <label for="email">
+          Email Address <span class="sinal">*</span>
+        </label>
+      </p>
       <input type="email" name="email" id="email" class="square" />
       <p class="erros" id="erroEmail"></p>
 
@@ -77,9 +81,11 @@
         </div>
       </div>
       <p class="erros" id="erroRadio"></p>
-      <label for="comment">
-        <p class="title">Message <span class="sinal">*</span></p>
-      </label>
+      <p class="title">
+        <label for="comment">
+           Message <span class="sinal">*</span>
+        </label>
+      </p>
       <textarea name="comment" id="comment" maxlength="430"></textarea>
       <p class="erros" id="erroMsg"></p>
 
